<resources>
    <string name="app_name">Project_Mid</string>


    <string name="account">Аккаунт</string>
    <string name="settings">Настройки</string>
    <string name="history">История просмотра</string>
    <string name="like">Понравившиеся</string>
    <string name="theme">Тема</string>
    <string name="feedback">Отзыв</string>
    <string name="open">открыть</string>
    <string name="close">закрыть</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>